// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`coblocks/gallery-masonry should have attachment link when linkTo is set to "attachment" 1`] = `
"<!-- wp:coblocks/gallery-masonry {\\"linkTo\\":\\"attachment\\"} -->
<figure class=\\"wp-block-coblocks-gallery-masonry masonry-grid is-cropped\\"></figure>
<!-- /wp:coblocks/gallery-masonry -->"
`;

exports[`coblocks/gallery-masonry should have className 'has-border-radius-10' with radius set to 10. 1`] = `
"<!-- wp:coblocks/gallery-masonry {\\"radius\\":10} -->
<figure class=\\"wp-block-coblocks-gallery-masonry masonry-grid is-cropped\\"></figure>
<!-- /wp:coblocks/gallery-masonry -->"
`;

exports[`coblocks/gallery-masonry should have className 'has-caption-style-dark' with captionStyle set to 'dark'. 1`] = `
"<!-- wp:coblocks/gallery-masonry {\\"captions\\":true} -->
<figure class=\\"wp-block-coblocks-gallery-masonry masonry-grid is-cropped\\"></figure>
<!-- /wp:coblocks/gallery-masonry -->"
`;

exports[`coblocks/gallery-masonry should have className 'has-caption-style-light' with captionStyle set to 'light'. 1`] = `
"<!-- wp:coblocks/gallery-masonry {\\"captions\\":true,\\"captionStyle\\":\\"light\\"} -->
<figure class=\\"wp-block-coblocks-gallery-masonry masonry-grid is-cropped\\"></figure>
<!-- /wp:coblocks/gallery-masonry -->"
`;

exports[`coblocks/gallery-masonry should have className 'has-filter-dim' with filter set to 'dim'. 1`] = `
"<!-- wp:coblocks/gallery-masonry {\\"filter\\":\\"dim\\"} -->
<figure class=\\"wp-block-coblocks-gallery-masonry masonry-grid is-cropped\\"></figure>
<!-- /wp:coblocks/gallery-masonry -->"
`;

exports[`coblocks/gallery-masonry should have className 'has-filter-grayscale' with filter set to 'grayscale'. 1`] = `
"<!-- wp:coblocks/gallery-masonry {\\"filter\\":\\"grayscale\\"} -->
<figure class=\\"wp-block-coblocks-gallery-masonry masonry-grid is-cropped\\"></figure>
<!-- /wp:coblocks/gallery-masonry -->"
`;

exports[`coblocks/gallery-masonry should have className 'has-filter-saturation' with filter set to 'saturation'. 1`] = `
"<!-- wp:coblocks/gallery-masonry {\\"filter\\":\\"saturation\\"} -->
<figure class=\\"wp-block-coblocks-gallery-masonry masonry-grid is-cropped\\"></figure>
<!-- /wp:coblocks/gallery-masonry -->"
`;

exports[`coblocks/gallery-masonry should have className 'has-filter-sepia' with filter set to 'sepia'. 1`] = `
"<!-- wp:coblocks/gallery-masonry {\\"filter\\":\\"sepia\\"} -->
<figure class=\\"wp-block-coblocks-gallery-masonry masonry-grid is-cropped\\"></figure>
<!-- /wp:coblocks/gallery-masonry -->"
`;

exports[`coblocks/gallery-masonry should have className 'has-filter-vintage' with filter set to 'vintage'. 1`] = `
"<!-- wp:coblocks/gallery-masonry {\\"filter\\":\\"vintage\\"} -->
<figure class=\\"wp-block-coblocks-gallery-masonry masonry-grid is-cropped\\"></figure>
<!-- /wp:coblocks/gallery-masonry -->"
`;

exports[`coblocks/gallery-masonry should have className 'has-grid-large' with gridSize set to 'large'. 1`] = `
"<!-- wp:coblocks/gallery-masonry -->
<figure class=\\"wp-block-coblocks-gallery-masonry masonry-grid is-cropped\\"></figure>
<!-- /wp:coblocks/gallery-masonry -->"
`;

exports[`coblocks/gallery-masonry should have className 'has-grid-xlarge' with gridSize set to 'xlarge'. 1`] = `
"<!-- wp:coblocks/gallery-masonry -->
<figure class=\\"wp-block-coblocks-gallery-masonry masonry-grid is-cropped\\"></figure>
<!-- /wp:coblocks/gallery-masonry -->"
`;

exports[`coblocks/gallery-masonry should have className 'has-large-gutter' with gutter set to 'large'. 1`] = `
"<!-- wp:coblocks/gallery-masonry {\\"gutter\\":\\"large\\"} -->
<figure class=\\"wp-block-coblocks-gallery-masonry masonry-grid is-cropped\\"></figure>
<!-- /wp:coblocks/gallery-masonry -->"
`;

exports[`coblocks/gallery-masonry should have className 'has-lightbox' with lightbox enabled. 1`] = `
"<!-- wp:coblocks/gallery-masonry {\\"lightbox\\":true} -->
<figure class=\\"wp-block-coblocks-gallery-masonry masonry-grid has-lightbox is-cropped\\"></figure>
<!-- /wp:coblocks/gallery-masonry -->"
`;

exports[`coblocks/gallery-masonry should have className 'has-medium-gutter' with gutter set to 'medium'. 1`] = `
"<!-- wp:coblocks/gallery-masonry {\\"gutter\\":\\"medium\\"} -->
<figure class=\\"wp-block-coblocks-gallery-masonry masonry-grid is-cropped\\"></figure>
<!-- /wp:coblocks/gallery-masonry -->"
`;

exports[`coblocks/gallery-masonry should have className 'has-small-gutter' with gutter set to 'small'. 1`] = `
"<!-- wp:coblocks/gallery-masonry {\\"gutter\\":\\"small\\"} -->
<figure class=\\"wp-block-coblocks-gallery-masonry masonry-grid is-cropped\\"></figure>
<!-- /wp:coblocks/gallery-masonry -->"
`;

exports[`coblocks/gallery-masonry should have custom link when linkTo is set to "custom" 1`] = `
"<!-- wp:coblocks/gallery-masonry {\\"linkTo\\":\\"custom\\"} -->
<figure class=\\"wp-block-coblocks-gallery-masonry masonry-grid is-cropped\\"></figure>
<!-- /wp:coblocks/gallery-masonry -->"
`;

exports[`coblocks/gallery-masonry should have figcaption element with captions enabled and caption text. 1`] = `
"<!-- wp:coblocks/gallery-masonry {\\"captions\\":true} -->
<figure class=\\"wp-block-coblocks-gallery-masonry masonry-grid is-cropped\\"></figure>
<!-- /wp:coblocks/gallery-masonry -->"
`;

exports[`coblocks/gallery-masonry should have media link when linkTo is set to "media" 1`] = `
"<!-- wp:coblocks/gallery-masonry {\\"linkTo\\":\\"media\\"} -->
<figure class=\\"wp-block-coblocks-gallery-masonry masonry-grid is-cropped\\"></figure>
<!-- /wp:coblocks/gallery-masonry -->"
`;

exports[`coblocks/gallery-masonry should render with images 1`] = `
"<!-- wp:coblocks/gallery-masonry -->
<figure class=\\"wp-block-coblocks-gallery-masonry masonry-grid is-cropped\\"></figure>
<!-- /wp:coblocks/gallery-masonry -->"
`;
